# geo

./: .flake8  .gitignore  README.md  __init__.py  cds.py  cli.py  config.yaml  config_manager.py  data.py  geo.py  geo_temp.py  logging_config.py  orchestrator.py  places.yaml  plot.py  progress.py  pyproject.toml  pytest.ini  requirements.txt  schema.yaml  settings.yaml  settings_manager.py
data_cache/: Amsterdam_Netherlands.yaml  Amsterdam_Netherlands_noon_temps.yaml  Anchorage_AK.yaml  Anchorage_AK_noon_temps.yaml  Athens_Greece.yaml  Athens_Greece_noon_temps.yaml  Auckland_New_Zealand.yaml  Auckland_New_Zealand_noon_temps.yaml  Austin_TX.yaml  Austin_TX_noon_temps.yaml  Bangalore_India.yaml  Bangalore_India_noon_temps.yaml  Bangkok_Thailand.yaml  Bangkok_Thailand_noon_temps.yaml  Barcelona_Spain.yaml  Barcelona_Spain_noon_temps.yaml  Beijing_China.yaml  Beijing_China_noon_temps.yaml  Berlin_Germany.yaml  Berlin_Germany_noon_temps.yaml  Brisbane_Australia.yaml  Brisbane_Australia_noon_temps.yaml  Buenos_Aires_Argentina.yaml  Buenos_Aires_Argentina_noon_temps.yaml  Cairo_Egypt.yaml  Cairo_Egypt_noon_temps.yaml  Cambridge_UK.yaml  Cambridge_UK_noon_temps.yaml  Cape_Town_South_Africa.yaml  Cape_Town_South_Africa_noon_temps.yaml  Copenhagen_Denmark.yaml  Copenhagen_Denmark_noon_temps.yaml  Delhi_India.yaml  Delhi_India_noon_temps.yaml  Denver_CO.yaml  Denver_CO_noon_temps.yaml  Dubai_UAE.yaml  Dubai_UAE_noon_temps.yaml  Hong_Kong.yaml  Hong_Kong_noon_temps.yaml  (+74 more)
geo_core/: README.md  __init__.py  config.py  constants.py  formatting.py  grid.py  progress.py
(+53 files in other folders)
